# mancala-reiknigreind

./: .gitignore  README.md  action.py  competition.py  play.py  pyproject.toml  requirements.txt  sandbox.py
mancala/: config.py  game.py  logger.py  mancala.py
mancala/groups/Teymi3_kls_WH/: action.py
mancala/groups/actor_critic/: action.py  actor_critic_dyna_training.py  actor_critic_training.py
mancala/groups/actor_critic/ac/: b1_trained_2222.pth  b2_trained_2222.pth  theta_2222.pth  w1_trained_2222.pth  w2_trained_2222.pth
mancala/groups/actor_critic_baseline/: action.py  actor_critic_dyna_training.py  actor_critic_training.py
mancala/groups/actor_critic_baseline/ac/: b1_trained_686.pth  b2_trained_686.pth  theta_686.pth  w1_trained_686.pth  w2_trained_686.pth
mancala/groups/actor_critic_basic/: action.py  actor_critic_training.py
mancala/groups/actor_critic_basic/ac/: b1_trained_633.pth  b2_trained_633.pth  theta_633.pth  w1_trained_633.pth  w2_trained_633.pth
mancala/groups/deterministic_minmax/: action.py
mancala/groups/example_group/: action.py
mancala/groups/group_3A/: Qnetwork.py  Qtest.py  action.py  model.pth  model.pth3  state_dict_model.pth  training.py
mancala/groups/group_random/: action.py
mancala/groups/human/: humanaction.py
mancala/groups/minmax/: action.py
mancala/groups/teymi1/: action.py  train_nn.py
mancala/groups/teymi1/nn/: b1_ac_trained_123000.pth  b1_trained_selfplay_finalcandidate_880000.pth  b1_trained_selfplay_finalcandidate_mixed_120000.pth  b2_trained_selfplay_finalcandidate_mixed_120000.pth  theta_ac_trained_123000.pth  w1_ac_trained_123000.pth  w1_trained_selfplay_finalcandidate_880000.pth  w1_trained_selfplay_finalcandidate_mixed_120000.pth  (+2 more)
mancala/groups/teymi1_ac/: action.py
mancala/groups/teymi1_actor_critic_dynaq/: action.py  actor_critic_dyna_training.py
mancala/groups/teymi2/: action.py  b1_trained_600000.pth  b2_trained_600000.pth  w1_trained_600000.pth  w2_trained_600000.pth
mancala/groups/teymi3/: Qnetwork.py  action.py  agent_Qnetwork.pth  training.py
mancala/groups/trained_against_minmax/: action.py
(+18 files in other folders)
